css structure made

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,9 +10,26 @@
   <body>
     <div class="container">
       <div class="mainContainer">
-        <div id="leftBox">hello world</div>
+        <div id="leftBox">
+          <div id="umbrella">
+            <div id="img_umbrella">
+              <img
+                src="/Public/Blue umbrella.png"
+                width="60%"
+                alt="by default blue umbrella png"
+                srcset=""
+              />
+              <div id="logo_umbrella">
+                <img
+                  id="logo-bottom"
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtS5cxoXibJ7hlcxcrPL-ac2DQLcIIREQPRu7jvvEIMu3KO2URDGHJ9vB3GEBWNfAYWCRnaPakglE&usqp=CAU&ec=48600113"
+                  alt="bottom company logo"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
         <div id="rightBox">Customize umbrella</div>
-        <!-- <div id="p1">Hello World!</div> -->
       </div>
     </div>
     <script src="../js/index.js"></script>
