made the info box

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,22 @@
             </div>
           </div>
         </div>
-        <div id="rightBox">Customize umbrella</div>
+        <div id="rightBox">
+          <div id="infoBox">
+            <div id="firstBox">Custom Umbrella</div>
+            <div id="secondBox">
+              <div id="colorBadge">color</div>
+            </div>
+            <div id="thirdBox">
+              <p>
+                Customize Your Umbrella<br />Upload a Logo for an Instant
+                Preview
+              </p>
+              <p>Png and Jpg files only. Max file size 5MB</p>
+              <button>upload</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="../js/index.js"></script>
