made the upload button now js implemetation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
             <div id="img_umbrella">
               <img
                 src="/Public/Blue umbrella.png"
-                width="60%"
+                width="70%"
                 alt="by default blue umbrella png"
                 srcset=""
               />
@@ -31,17 +31,22 @@
         </div>
         <div id="rightBox">
           <div id="infoBox">
-            <div id="firstBox">Custom Umbrella</div>
+            <div id="firstBox"><p id="headingone">Custom Umbrella</p></div>
             <div id="secondBox">
               <div id="colorBadge">color</div>
             </div>
             <div id="thirdBox">
-              <p>
-                Customize Your Umbrella<br />Upload a Logo for an Instant
-                Preview
-              </p>
-              <p>Png and Jpg files only. Max file size 5MB</p>
-              <button>upload</button>
+              <p id="headingtwo">Customize Your Umbrella</p>
+              <p id="headingthree">Upload a Logo for an Instant Preview</p>
+              <p id="headingthree">Png and Jpg files only. Max file size 5MB</p>
+              <div id="imageUpload">
+                <input
+                  id="imageSvg"
+                  type="image"
+                  src="/Public/upload_icon.svg"
+                />
+                <p>UPLOAD LOGO</p>
+              </div>
             </div>
           </div>
         </div>
