color badges made dynamically using js

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,7 +33,7 @@
           <div id="infoBox">
             <div id="firstBox"><p id="headingone">Custom Umbrella</p></div>
             <div id="secondBox">
-              <div id="colorBadge">color</div>
+              <div id="colorBadge"></div>
             </div>
             <div id="thirdBox">
               <p id="headingtwo">Customize Your Umbrella</p>
