all functionalities with upload done

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,11 +20,7 @@
                 srcset=""
               />
               <div id="logo_umbrella">
-                <img
-                  id="logo-bottom"
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtS5cxoXibJ7hlcxcrPL-ac2DQLcIIREQPRu7jvvEIMu3KO2URDGHJ9vB3GEBWNfAYWCRnaPakglE&usqp=CAU&ec=48600113"
-                  alt="bottom company logo"
-                />
+                <img id="logo-bottom" />
               </div>
             </div>
           </div>
