all functionalities fulfilled

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,8 @@
           <div id="umbrella">
             <div id="img_umbrella">
               <img
-                src="/Public/Blue umbrella.png"
+                id="umbrella_img"
+                src="/Public/lightBlue umbrella.png"
                 width="70%"
                 alt="by default blue umbrella png"
                 srcset=""
@@ -41,7 +42,7 @@
                   type="image"
                   src="/Public/upload_icon.svg"
                 />
-                <p>UPLOAD LOGO</p>
+                <p id="upload_word">UPLOAD LOGO</p>
               </div>
             </div>
           </div>
