--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Customize Umbrella</title>
-    <link rel="stylesheet" href="../css//index.css" />
+    <link rel="stylesheet" href="/src/css/index.css" />
   </head>
   <body>
     <div class="container">
@@ -49,6 +49,6 @@
         </div>
       </div>
     </div>
-    <script src="../js/index.js"></script>
+    <script src="/src/js/index.js"></script>
   </body>
 </html>
